--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		This is your fallback content in case JavaScript fails to load.
 	</noscript>
 	<p class="thanks-to">Design from
-		<a target="_blank" rel="noopener" href="https://d13yacurqjgara.cloudfront.net/users/218187/screenshots/2921897/attachments/606256/freebies.sketch, https://sketchrepo.com/free-sketch/form-ui-freebie/">here</a>
+		<a target="_blank" rel="noopener" href="https://sketchrepo.com/free-sketch/form-ui-freebie/">here</a>
 	</p>
 	<div id="app"></div>
 	<!-- Todo: only include in production -->
