--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 		<% }}} %>
 </head>
 <style>
+	html {
+		font-family: Helvetica, sans-serif;
+		font-size: 16px;
+	}
+
+	body {
+		height: 100vh;
+	}
+
 	.thanks-to {
 		background-color: #f8f8f8;
 		margin: 0;
